--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,13 @@
 ---
 layout: default
 ---
-<div class="post">
+<div class="container">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+  <header>
+    <h3>{{ page.title }}</h3>
   </header>
 
-  <article class="post-content">
+  <article>
     {{ content }}
   </article>
 
