Makes the footer stick to the bottom of the page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
-<footer class="footer">
-      <div class="container"> 
-        <p class="text-muted">{{ site.title }}: {{ site.description }}</p>
-        <p class="rss-subscribe text-muted">subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a></p>
-      </div>
-</footer>
+
+<div class="container"> 
+	<p class="text-muted">{{ site.title }}: {{ site.description }}</p>
+	<p class="rss-subscribe text-muted">
+		subscribe <a href="{{ "/feed.xml" | prepend: site.baseurl }}">via RSS</a>
+	</p>
+</div>
+
