--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="jumbotron">
+<div class="jumbotron">
   <nav class="container">
     <div class="navbar-right">
       <a href="{{ site.baseurl }}/">{{ site.title }}</a>
@@ -16,4 +16,4 @@
       </h3>
     </div>
   </nav>
-</header>
+</div>
