--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,15 +4,19 @@
   {% include head.html %}
 
   <body>
+  	<div class="wrapper">
 
-    {% include header.html %}
+  		<div class="header">
+    		{% include header.html %}
+    	</div>
+    	<div class="content">
+    		{{ content }}
+    	</div>
+    	<div class="footer"> 
+    		{% include footer.html %}
+    	</div>
 
-    <div>
-      {{ content }}
-    </div>
-
-    {% include footer.html %}
-
+	</div>
   </body>
 
 </html>
