--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,14 +1,17 @@
 ---
 layout: default
 ---
-<div class="container">
+<div class="page">
 
-  <header>
-    <h3>{{ page.title }}</h3>
-  </header>
+	<div class="container">
 
-  <article>
-    {{ content }}
-  </article>
+	  <header>
+	    <h3>{{ page.title }}</h3>
+	  </header>
 
-</div>
+	  <article>
+	    {{ content }}
+	  </article>
+
+	</div>
+<div>
