--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -1,7 +1,25 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    margin: 0 0 100px;
+    /* bottom = footer height */
+}
+
+
 .footer{
-position: absolute;
-bottom: 0;
-width: 100%;
-height: 60px;
-background-color: #eee;
-}`
+  background-color: #eee;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 100px;
+  width: 100%;
+  overflow:hidden;
+}
+
+
+body > .wrapper{
+  height: auto;
+  min-height: 100%;
+}
