--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -2,6 +2,7 @@ html {
     position: relative;
     min-height: 100%;
 }
+
 body {
     margin: 0 0 100px;
 }
@@ -21,6 +22,7 @@ body > .wrapper{
   min-height: 100%;
 }
 
-.rainbow {
-  zoom : .1;
+.image {
+  height : 150px;
+  margin: 10px;
 }
