--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -26,3 +26,12 @@ body > .wrapper{
   height : 150px;
   margin: 10px;
 }
+
+.msad-header {
+  color : black;
+}
+
+.msad-header:hover{
+  color : black;
+  text-decoration: none;
+}
